    * Sys#closedir method throws an exception if the directory stream is already closed.
    * Sys#rewinddir method throws an exception if the directory stream is already closed.
    * Sys#seekdir method throws an exception if the directory stream is already closed.
    * Sys#telldir method throws an exception if the directory stream is already closed.
    
0.514001 2024-03-27
  [Bug Fix]
    * Fix bug that config files cannot be parsed for SPVM version up.
0.514 2023-12-26
  [Bug Fix]
    * Fix the bug that FILE_NAME in native source file does not have the file scope.
0.513 2023-12-22
  [Incompatible Changes]
    * The first argument of the localtime and gmtime method in the Sys class becomes optional argument and allow it minus epoch time by $allow_minus optional argument.
      
      method localtime : Time::Piece ($epoch : long = -1, $allow_minus = 0);
      
      method gmtime : Time::Piece ($epoch : long = -1, $allow_minus = 0);

0.512 2023-12-08
  [New Features]
    * Add the new_with_family method class to the Sys::Socket::Sockaddr class.
    * Add the upgrade method to the Sys::Socket::Sockaddr class.
  [Incompatible Changes]
    * Remove the to_family_sockaddr method from the Sys::Socket class.
    * Remove deprecated the spvm_socket_errno method and the spvm_socket_strerror method from the Sys::Socket class.
    * The socket method in the Sys class set FD_CLOEXEC to the created socket file descriptor.
    * The socketpair method in the Sys class set FD_CLOEXEC to the created socket file descriptor.
    * The accept method in the Sys class set FD_CLOEXEC to the created socket file descriptor.
    * The connect method in the Sys class set FD_CLOEXEC to the created socket file descriptor.
  [Document Fix]
    * Fix many Sys::Socket documents.
  [Incompatible Changes]
    * Remove the Sys::Socket::Error class.
    * Sys::Socket::Error::InetInvalidNetworkAddress inherits the Error class.